# salsa

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rxconfig.py
.github/workflows/: ci.yml  docker-publish.yml  release.yml
assets/styles/: global.css
scripts/: capture_plex_fixtures.py  entrypoint.sh
src/salsa/: __init__.py
src/salsa/backend/: __init__.py  config.py  logging.py  main.py
src/salsa/backend/models/: auth.py  batch.py  plex.py
src/salsa/backend/routers/: auth.py  libraries.py  media.py  servers.py  tracks.py
src/salsa/backend/services/: auth.py  batch.py  matcher.py  plex_client.py
src/salsa/backend/utils/: headers.py
src/salsa/frontend/: __init__.py  api.py  app.py  styles.py
src/salsa/frontend/components/: __init__.py  batch_modal.py  library_nav.py  login.py  server_select.py  server_status.py  track_table.py
src/salsa/frontend/pages/: __init__.py  index.py  login.py
src/salsa/frontend/state/: __init__.py  auth.py  batch.py  browser.py
tests/: __init__.py  conftest.py  test_batch.py  test_frontend_state.py  test_matcher.py  test_plex_client.py  test_routers.py
tests/fixtures/plex_responses/: episode_39066_metadata.json  libraries.json  library_1_items.json  season_39065_episodes.json  show_39040_metadata.json  show_39040_seasons.json
